Added results page

--- a/mvc_app/Views/Home/Index.cshtml
+++ b/mvc_app/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1>Github project repository</h1>
 	<p class="lead">
 		<label>
-			Input here: <input type='text' name='theinput' id='theinput'>
+			Github https url: <input type='text' name='guthuburl' id='githuburl'>
 		</label>
 	</p>
     <p><a href="#" class="btn btn-primary btn-lg">Go!</a></p>
