Got to connect with octokit and retrieve all three issues for specific repository

--- a/mvc_app/Views/Result/Result.cshtml
+++ b/mvc_app/Views/Result/Result.cshtml
@@ -8,10 +8,5 @@
 <h2>Result</h2>
 
 <p>
-Results here
+	<label>Total amount of issues:&nbsp;</label>@ViewBag.TotalIssues
 </p>
-<table class="table">
-    <tr>
-        <th></th>
-    </tr>
-</table>
