Search results returning correct, generalized data

--- a/mvc_app/Views/Home/Index.cshtml
+++ b/mvc_app/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 			Github https url: <input type='text' name='guthuburl' id='githuburl'>
 		</label>
 	</p>
-    <p><a href="#" class="btn btn-primary btn-lg">Go!</a></p>
+    <p><a href="../Result/result" class="btn btn-primary btn-lg">Go!</a></p>
 </div>
 
 <div class="row result">
