--- a/mvc_app/Views/Result/Result.cshtml
+++ b/mvc_app/Views/Result/Result.cshtml
@@ -8,5 +8,7 @@
 <h2>Result</h2>
 
 <p>
-	<label>Total amount of issues:&nbsp;</label>@ViewBag.TotalIssues
+	<label>Total amount of issues issues_AllOpen:&nbsp;</label>@ViewBag.issues_AllOpen
+	<label>Total amount of issues issues_OpeninLast24Hours:&nbsp;</label>@ViewBag.issues_OpeninLast24Hours
+	<label>Total amount of issues issues_OpenMoreThan7Days:&nbsp;</label>@ViewBag.issues_OpenMoreThan7Days
 </p>
