--- a/mvc_app/Views/Home/Index.cshtml
+++ b/mvc_app/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 
 			{
 				//passes the input GitHub repository URL into the form for the ResultController to interpret
-				@Html.TextBox("RepositoryUrl", @"https://github.com/Shippable/docsv2/", new { style = "width: 300px;color: #666666;padding:5px;" }) ;
+				@Html.TextBox("RepositoryUrl", @"https://github.com/miguelmoreno/shippable", new { style = "width: 300px;color: #666666;padding:5px;" }) ;
 
 				//submits the form
 				<input type="submit" value="Get issues" />
