--- a/mvc_app/Views/Result/Index.cshtml
+++ b/mvc_app/Views/Result/Index.cshtml
@@ -5,12 +5,18 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Results for...</h2>
+<h2>Results for <span class="githuburl">@ViewBag.repositoryUrl</span></h2>
 
 <p>
 	<ul>
 		<li>
-			<label>Total amount of issues issues_AllOpen:&nbsp;</label>ViewBag.issues_AllOpen
+			<label>Total amount of issues issues_AllOpen:&nbsp;</label>@ViewBag.issues_AllOpen
+		</li>
+		<li>
+			<label>Total amount of issues issues_OpeninLast24Hours:&nbsp;</label>@ViewBag.issues_OpeninLast24Hours
+		</li>
+		<li>
+			<label>Total amount of issues issues_OpenMoreThan7Days:&nbsp;</label>@ViewBag.issues_OpenMoreThan7Days
 		</li>
 	</ul>
 </p>
