placed GitHubToken in Server Variable in Azure

--- a/mvc_app/Views/Home/Index.cshtml
+++ b/mvc_app/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 	ViewBag.Title = "Home Page";
 }
 
-<h2 class="header">Github project repository v0.1</h2>
+<h2 class="header">Github project repository Issue checker project v0.2</h2>
 
 <fieldset>
 	<ul>
