--- a/mvc_app/Views/Result/Index.cshtml
+++ b/mvc_app/Views/Result/Index.cshtml
@@ -5,18 +5,18 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Results for <span class="githuburl">@ViewBag.repositoryUrl</span></h2>
+<h2>Results for <a href="@ViewBag.repositoryUrl">@ViewBag.repositoryUrl</a></h2>
 
 <p>
 	<ul>
 		<li>
-			<label>Total amount of issues issues_AllOpen:&nbsp;</label>@ViewBag.issues_AllOpen
+			<label>Total amount of opn issues:&nbsp;</label>@ViewBag.issues_AllOpen
 		</li>
 		<li>
-			<label>Total amount of issues issues_OpeninLast24Hours:&nbsp;</label>@ViewBag.issues_OpeninLast24Hours
+			<label>Total amount of issues Opened in the last 24 Hours:&nbsp;</label>@ViewBag.issues_OpeninLast24Hours
 		</li>
 		<li>
-			<label>Total amount of issues issues_OpenMoreThan7Days:&nbsp;</label>@ViewBag.issues_OpenMoreThan7Days
+			<label>Total amount of issues Open for more than 7 Days:&nbsp;</label>@ViewBag.issues_OpenMoreThan7Days
 		</li>
 	</ul>
 </p>
